--- a/app/src/main/res/layout/tab2_side_effects.xml
+++ b/app/src/main/res/layout/tab2_side_effects.xml
@@ -7,7 +7,7 @@
     tools:context="com.example.majd.medicinereader.ResultActivity$PlaceholderFragment">
 
     <TextView
-        android:id="@+id/section_label"
+        android:id="@+id/section_label_side_effect"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/activity_vertical_margin"
