--- a/app/src/main/res/layout/tab1_how_use.xml
+++ b/app/src/main/res/layout/tab1_how_use.xml
@@ -4,28 +4,21 @@
     android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.majd.medicinereader.ResultActivity$PlaceholderFragment">
+    tools:context="com.example.majd.medicinereader.Tab1HowUse">
 
-    <!--<TextView-->
-        <!--android:id="@+id/section_label"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_marginBottom="@dimen/activity_vertical_margin"-->
-        <!--android:layout_marginEnd="@dimen/activity_horizontal_margin"-->
-        <!--android:layout_marginStart="@dimen/activity_horizontal_margin"-->
-        <!--android:layout_marginTop="@dimen/activity_vertical_margin"-->
-        <!--app:layout_constraintLeft_toLeftOf="parent"-->
-        <!--app:layout_constraintTop_toTopOf="@+id/constraintLayout"-->
-        <!--tools:layout_constraintLeft_creator="1"-->
-        <!--tools:layout_constraintTop_creator="1"-->
-        <!--android:text="طريقة الاستخدام"/>-->
-
-    <android.support.v7.widget.RecyclerView
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/section_label_how_use"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/how_use_recyclerView"
-        android:scrollbars="vertical">
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:layout_marginEnd="@dimen/activity_horizontal_margin"
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/constraintLayout"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintTop_creator="1"
+        android:text="طريقة الاستخدام"/>
 
-    </android.support.v7.widget.RecyclerView>
 
 </android.support.constraint.ConstraintLayout>
