--- a/app/src/main/res/layout/tab2_side_effects.xml
+++ b/app/src/main/res/layout/tab2_side_effects.xml
@@ -4,7 +4,7 @@
     android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.majd.medicinereader.ResultActivity$PlaceholderFragment">
+    tools:context="com.example.majd.medicinereader.Tab2SideEffects">
 
     <TextView
         android:id="@+id/section_label_side_effect"
