--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,19 @@
         android:text="@string/scan"
         android:textColor="@android:color/background_light" />
 
+    <android.support.v7.widget.SearchView
+        android:id="@+id/search_input"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:background="@color/colorPrimary"
+        android:text="@string/search"
+        android:textColor="@android:color/white"
+        app:queryHint="اكتب اسم الدواء باللغة الانجليزية">
+
+    </android.support.v7.widget.SearchView>
+
+
     <TextView
         android:id="@+id/scan_format"
         android:layout_width="wrap_content"
