--- a/app/src/main/res/layout/tab1_how_use.xml
+++ b/app/src/main/res/layout/tab1_how_use.xml
@@ -1,4 +1,4 @@
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/constraintLayout"
@@ -8,17 +8,13 @@
 
     <TextView
         android:id="@+id/section_label_how_use"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_margin="22dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/constraintLayout"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintTop_creator="1"
+        android:layout_centerHorizontal="true"
+        android:layout_centerInParent="true"
+        android:textSize="30dp"
         android:text="طريقة الاستخدام"/>
 
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
