--- a/app/src/main/res/layout/tab2_side_effects.xml
+++ b/app/src/main/res/layout/tab2_side_effects.xml
@@ -1,4 +1,4 @@
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/constraintLayout"
@@ -6,18 +6,25 @@
     android:layout_height="match_parent"
     tools:context="com.example.majd.medicinereader.Tab2SideEffects">
 
-    <TextView
-        android:id="@+id/section_label_side_effect"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/constraintLayout"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintTop_creator="1"
-        android:text="اثار جانبية"/>
+    <!--<TextView-->
+        <!--android:id="@+id/section_label_side_effect"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_margin="22dp"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_centerHorizontal="true"-->
+        <!--android:layout_centerInParent="true"-->
+        <!--android:textSize="30dp"-->
+        <!--android:text="اثار جانبية"/>-->
 
-</android.support.constraint.ConstraintLayout>
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_margin="22dp"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerInParent="true"
+        android:textSize="30dp"
+        android:id="@+id/side_effect_listview">
+
+    </ListView>
+
+</RelativeLayout>
