--- a/app/src/main/res/layout/tab1_how_use.xml
+++ b/app/src/main/res/layout/tab1_how_use.xml
@@ -8,13 +8,15 @@
 
     <TextView
         android:id="@+id/section_label_how_use"
-        android:layout_width="match_parent"
-        android:layout_margin="22dp"
-        android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerInParent="true"
         android:textSize="30dp"
-        android:text="طريقة الاستخدام"/>
+        android:text="طريقة الاستخدام"
+        android:textColor="#000000"
+        android:gravity="center"
+        android:layout_margin="4dip"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"/>
 
 
 </RelativeLayout>
