--- a/app/src/main/res/layout/tab5_storing.xml
+++ b/app/src/main/res/layout/tab5_storing.xml
@@ -8,12 +8,14 @@
 
     <TextView
         android:id="@+id/section_label_storing"
-        android:layout_width="match_parent"
-        android:layout_margin="22dp"
-        android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerInParent="true"
         android:textSize="30dp"
-        android:text="طريقة الحفظ"/>
+        android:text="طريقة الحفظ"
+        android:textColor="#000000"
+        android:gravity="center"
+        android:layout_margin="4dip"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"/>
 
 </RelativeLayout>
